11-firewall.tf
# resource "azurerm_firewall_policy" "hub_firewall_policy" {
#   name                = var.firewall_policies_HubFirewallPolicy_premium_ed4cc7_name
#   location            = "eastus"
#   resource_group_name = rg-hub-eastus
#   sku                 = "Premium"
#   threat_intel_mode   = "Alert"
# }
